<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="welcome">Welcome %s</string>
    <string name="logout_button">Logout</string>
    <string name="fetch_contacts_button">Fetch Contacts</string>
    <string name="fetch_accounts_button">Fetch Accounts</string>
    <string name="clear_button">Clear</string>
    <string name="app_name">Channel4++ Mobile Metrics</string>
    <string name="select_app">Select an App</string>
    <string name="menu_settings">Settings</string>
    <string name="this_is_an_android_app">This is an Android app</string>
    <string name="our_package_name">edu.channel4.mobilemetrics.dashboard.android</string>
    <string name="refresh_app_list">Refresh</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="generate_pie_graph">Generate Pie Graph</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_attribute_list">AttributeListActivity</string>
    <string name="title_activity_pie_graph">PieGraphActivity</string>
    <string name="title_activity_graph_viewer">GraphViewerActivity</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="developers">Developers:</string>
    <string name="defaultAppName">App Name</string>

    <string-array name="developer_names">
        <item>Brian Middaugh</item>
        <item>Chun Hui Pek</item>
        <item>Ray Tam</item>
        <item>Mark Lerner</item>
        <item>Girum Ibssa</item>
    </string-array>
    <string-array name="developer_names_legit">
        <item>Bittah Prophet</item>
        <item>Phantom Specialist</item>
        <item>Ray Tam</item>
        <item>Profound Pupil</item>
        <item>Violent King</item>
    </string-array>

    <string name="usage">Usage</string>
    <string name="audience">Audience</string>
    <string name="custom_graphs">Custom Graphs</string>
    <string name="create_new_custom_graph">Create New Custom Graph</string>
    <string name="no_custom_graphs">No Custom Graphs</string>
    <string name="not_yet_implemented">Not Yet Implemented</string>
    <string name="title_activity_create_new_custom_graph">CreateNewCustomGraphActivity</string>
    <string name="event1">Event:</string>
    <string name="attribute1">Attribute: </string>
    <string name="in_the_last">Since: </string>
    <string name="view_new_custom_graph">View New Custom Graph</string>
    <string name="title_activity_edit_graph_request">EditGraphRequestActivity</string>
    <string name="please_enter_valid_inputs_">Please enter valid inputs.</string>
    <string name="ok">OK</string>
    <string name="no_data_for_this_graph">No data for this graph in the database.</string>

</resources>