<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".AppListActivity" >

    <RelativeLayout
        android:id="@+id/bottomRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <Button
            android:id="@+id/buttonAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="about"
            android:text="@string/about" />

        <Button
            android:id="@+id/buttonLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:onClick="logout"
            android:text="@string/logout" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listViewAppList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomRelativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewSelectApp" >
    </ListView>

    <TextView
        android:id="@+id/textViewSelectApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/select_app"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>